--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "pikaday-responsive",
-  "version": "0.1.0",
+  "version": "0.5.0",
   "devDependencies": {
-    "grunt": "~0.4.1",
-    "grunt-contrib-concat": "~0.3.0",
-    "grunt-contrib-uglify": "~0.2.7"
+    "grunt": "~0.4.5",
+    "grunt-contrib-concat": "^0.5.0",
+    "grunt-contrib-sass": "^0.8.1",
+    "grunt-contrib-uglify": "^0.7.0"
   }
 }
