--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "pikaday-responsive",
-  "version": "0.5.0",
+  "version": "0.5.1",
   "homepage": "https://github.com/mydea/PikadayResponsive",
   "authors": [
     "Francesco Novy <francesconovy@gmail.com>"
@@ -21,7 +21,7 @@
     "test",
     "tests"
   ],
-  "dependencies": {
+  "devDependencies": {
     "jquery": "~2.1.3",
     "momentjs": "~2.9.0",
     "pikaday": "~1.3.1",
