--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "pikaday-responsive",
-  "version": "0.5.2",
+  "version": "0.5.3",
   "homepage": "https://github.com/mydea/PikadayResponsive",
   "authors": [
     "Francesco Novy <francesconovy@gmail.com>"
@@ -22,9 +22,9 @@
     "tests"
   ],
   "devDependencies": {
-    "jquery": "~2.1.3",
-    "momentjs": "~2.9.0",
-    "pikaday": "~1.3.1",
+    "jquery": "~1.11.3",
+    "momentjs": "~2.10.6",
+    "pikaday": "1.3.2",
     "modernizr": "~2.8.3"
   }
 }
