--- a/bower.json
+++ b/bower.json
@@ -1,12 +1,12 @@
 {
   "name": "pikaday-responsive",
-  "version": "0.5.3",
+  "version": "0.6.0",
   "homepage": "https://github.com/mydea/PikadayResponsive",
   "authors": [
     "Francesco Novy <francesconovy@gmail.com>"
   ],
-  "description": "A wrapper for Pikaday which shows a native datepicker on mobile devices and Pikaday on desktops.",
-  "main": "pikaday-responsive/pikaday-responsive.jquery.js",
+  "description": "A responsive datepicker built on top of Pikaday. It shows the native datepicker on mobile devices and a nice JS-picker on desktop. ",
+  "main": "dist/pikaday-responsive.js",
   "keywords": [
     "Pikaday",
     "responsive",
@@ -21,10 +21,10 @@
     "test",
     "tests"
   ],
-  "devDependencies": {
+  "dependencies": {
     "jquery": "~1.11.3",
     "momentjs": "~2.10.6",
-    "pikaday": "1.3.2",
+    "pikaday": "1.3.3",
     "modernizr": "~2.8.3"
   }
 }
