--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "pikaday-responsive",
-  "version": "0.6.0",
+  "version": "0.6.1",
   "homepage": "https://github.com/mydea/PikadayResponsive",
   "authors": [
     "Francesco Novy <francesconovy@gmail.com>"
@@ -22,7 +22,7 @@
     "tests"
   ],
   "dependencies": {
-    "jquery": "~1.11.3",
+    "jquery": ">=1.11.3",
     "momentjs": "~2.10.6",
     "pikaday": "1.3.3",
     "modernizr": "~2.8.3"
