--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.6.7",
   "devDependencies": {
     "grunt": "~0.4.5",
+    "grunt-bower-install-simple": "^1.2.1",
+    "grunt-bower-update": "^0.1.2",
     "grunt-contrib-concat": "^0.5.0",
     "grunt-contrib-cssmin": "^0.14.0",
     "grunt-contrib-sass": "^0.9.2",
