--- a/bower.json
+++ b/bower.json
@@ -23,11 +23,8 @@
     "src"
   ],
   "dependencies": {
-    "jquery": "<2",
-    "momentjs": "~2.11.2",
+    "jquery": "2.2.3",
+    "momentjs": "2.13.0",
     "pikaday": "1.4.0"
-  },
-  "devDependencies": {
-    "moment-timezone": "~0.5.0"
   }
 }
